# Ethercat_STM32SP

./: .extSettings  .gitignore  .project  CMakeLists.txt  CMakePresets.json  STM32H7S78-DK_24bpp.ioc  changelog.txt  gcc-arm-none-eabi.cmake  readme.md
Appli/: CMakeLists.txt  stm32h7rsxx_RAMxspi1_ROMxspi2.ld
Appli/Core/Inc/: FreeRTOSConfig.h  jpeg_utils_conf.h  soem_port.h  stm32h7rsxx_hal_conf.h  stm32h7rsxx_it.h
Appli/Core/Src/: main.c  soem_port.c  stm32h7rsxx_hal_msp.c  stm32h7rsxx_it.c
Appli/TouchGFX/: ApplicationTemplate.touchgfx.part  DESIGN_MAPPING_GUIDE.md  MyApplication_1.touchgfx  MyApplication_4.touchgfx  application.config
Appli/TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
Appli/TouchGFX/assets/texts/: texts.xml
Appli/TouchGFX/gui/include/gui/common/: NumberFormat.hpp
Appli/TouchGFX/gui/include/gui/containers/: KeyBoard.hpp
Appli/TouchGFX/gui/include/gui/homepage_screen/: HomePagePresenter.hpp  HomePageView.hpp
Appli/TouchGFX/gui/include/gui/mainpage_screen/: MainPagePresenter.hpp  MainPageView.hpp
Appli/TouchGFX/gui/include/gui/manualpage_screen/: ManualPagePresenter.hpp  ManualPageView.hpp
Appli/TouchGFX/gui/include/gui/model/: Model.hpp  ModelListener.hpp
Appli/TouchGFX/gui/include/gui/parameterpage_screen/: ParameterPagePresenter.hpp  ParameterPageView.hpp
Appli/TouchGFX/gui/include/gui/programpage_screen/: ProgramPageView.hpp  (+1 more)
Appli/TouchGFX/gui/src/containers/: KeyBoard.cpp
Appli/TouchGFX/gui/src/homepage_screen/: HomePagePresenter.cpp  HomePageView.cpp
Appli/TouchGFX/gui/src/mainpage_screen/: MainPagePresenter.cpp  MainPageView.cpp
Appli/TouchGFX/gui/src/manualpage_screen/: ManualPagePresenter.cpp  ManualPageView.cpp
Appli/TouchGFX/gui/src/model/: Model.cpp
Appli/TouchGFX/gui/src/parameterpage_screen/: ParameterPagePresenter.cpp  ParameterPageView.cpp
Appli/TouchGFX/gui/src/programpage_screen/: ProgramPagePresenter.cpp  ProgramPageView.cpp
Appli/TouchGFX/gui/src/screen1_screen/: Screen1View.cpp
Appli/TouchGFX/gui/src/screen2_screen/: Screen2Presenter.cpp  Screen2View.cpp
Appli/TouchGFX/gui/src/screen3_screen/: Screen3Presenter.cpp  Screen3View.cpp
Boot/: CMakeLists.txt  stm32h7s7xx_flash.ld
Boot/Core/Inc/: stm32_extmem_conf.h  stm32h7rsxx_it.h
Boot/Core/Src/: main.c  stm32h7rsxx_hal_msp.c
Drivers/STM32H7RSxx_HAL_Driver/Src/: stm32h7rsxx_hal_uart.c
EWARM/: Project.eww
EWARM/Appli/: STM32H7S78-DK_24bpp_Appli.ewd  STM32H7S78-DK_24bpp_Appli.ewp  stm32h7rsxx_RAMxspi1_ROMxspi2.icf
EWARM/Boot/: STM32H7S78-DK_24bpp_Boot.ewd  STM32H7S78-DK_24bpp_Boot.ewp
MDK-ARM/: Project.uvmpw
MDK-ARM/Appli/: STM32H7S78-DK_24bpp_Appli.uvoptx  STM32H7S78-DK_24bpp_Appli.uvprojx  stm32h7rsxx_RAMxspi1_ROMxspi2.sct
MDK-ARM/Boot/: STM32H7S78-DK_24bpp_Boot.uvoptx  STM32H7S78-DK_24bpp_Boot.uvprojx
STM32CubeIDE/: .project
STM32CubeIDE/Appli/: .cproject  .project  STM32H7S78-DK_24bpp_Appli.launch
STM32CubeIDE/Boot/: .cproject  .project  STM32H7S78-DK_24bpp_Boot.launch
gcc/: Makefile  makefile_appli  makefile_boot
gcc/include/: flash_sections_int_ext.mk
tools/: build.ps1  build_and_flash.ps1  flash.ps1  flash_ui_only.ps1  sync_ui_and_build_flash.ps1  wait_generate_and_flash.ps1
(+377 files in other folders)
